# geo-change-risk

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.aws-local.yml
.github/: create-initial-issues.ps1  setup-labels.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-api.yml  ci-pipeline.yml  ci-webui.yml
areas-of-interest/paradise/: README.md  config.json  download-assets.py  initialize.py  requirements.txt
deployments/aws/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deployments/local/: README.md  config.yaml  setup.ps1  setup.sh
docs/: arcgis-pro-setup.md  automated-scheduling.md  aws-deployment.md  getting-started.md  multi-cloud-strategy.md  processing-pipeline.md
docs/testing/: README.md  local-setup-runbook.md  manual-test-template.md
infra/local/: .env.example  docker-compose.yml
machine-learning/landslide/: .gitignore  TRAINING.md  data.py  evaluate.py  model.py  train.py  (+1 more)
src/pipeline/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/pipeline/georisk/: __init__.py  cli.py  config.py  geo_utils.py
src/pipeline/georisk/db/: __init__.py  client.py
src/pipeline/georisk/raster/: __init__.py  change.py  download.py  landcover.py  landslide.py  lidar.py  ndvi.py  terrain.py
src/pipeline/georisk/risk/: __init__.py  proximity.py  scoring.py
src/pipeline/georisk/stac/: __init__.py  client.py  search.py
src/pipeline/georisk/storage/: __init__.py  minio.py
src/pipeline/tests/: conftest.py  test_check_command.py
src/pipeline/tests/raster/: test_change.py  test_landcover.py  test_landslide.py  test_lidar.py  test_ndvi.py
src/pipeline/tests/risk/: test_scoring.py
(+124 files in other folders)
